# Celestial-Positioning

./: README.md  camera_calibration.yaml  imu_calibration.yaml
data/: imu_data_20260311_153709.json  imu_data_20260323_152846.json  mag_data_20260311_153709.json  mag_data_20260323_152846.json
src/celestial_positioning/: package.xml  setup.cfg  setup.py
src/celestial_positioning/celestial_positioning/: attitude_ekf.py  attitude_node.py  camera.py  camera_calibrator.py  complementary_filter.py  exposure_timestamp_node.py  feature_extractor.py  gps_node.py  imu_attitude_node.py  imu_calibrator.py  imu_node.py  mag_calibrator.py  position_ekf.py  position_node.py  raw_camera_node.py
src/celestial_positioning/launch/: calibration_launch.py  gps_launch.py  imu_calibration_launch.py  mag_calibration_launch.py  record_launch.py  sensors_launch.py  system_launch.py
src/celestial_positioning/visual_testing/: run_demo.py  test_accuracy.py
src/celestial_positioning/visual_testing/data/solved/: wcs.fits
src/celestial_positioning/visual_testing/data/solved/IMG_6553/: IMG_6553-indx.xyls  IMG_6553.axy  IMG_6553.corr  IMG_6553.match  IMG_6553.rdls  IMG_6553.wcs
src/celestial_positioning/visual_testing/data/solved/nasa_180_45/: nasa_180_45.axy
src/celestial_positioning/visual_testing/data/solved/sky/: sky-indx.xyls  sky.axy  sky.corr  sky.match  sky.rdls  sky.wcs
src/celestial_positioning/visual_testing/data/stock/: IMG_6553.HEIC  nasa_180_45.fits
visualization/: cfilter_test.py  complementary_filter_output_with_cal_99_mag_flip.json  imu_visualizer.py
